<resources>
    <string name="app_name">ELKOS/Status</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Code1">1\nVerfüg-\nbar\nStreife</string>
    <string name="Code2">2\nVerfüg-\nbar\nReserve</string>
    <string name="Code3">3\nEinsatz\nange-\nnommen</string>
    <string name="Code4">4\nAm Einsatz-\nort ange-\nkommen</string>
    <string name="Code5">6\nBereit-\nhalte-\nzeit</string>
    <string name="Code6">7\nDienst-\nende\n</string>

    <string name="mCode1">Verfügbar auf Streife</string>
    <string name="mCode2">Verfügbar Reserve</string>
    <string name="mCode3">Einsatz angenommen</string>
    <string name="mCode4">Am Einsatzort angekommen</string>
    <string name="mCode5">Bereithaltezeit</string>
    <string name="mCode6">Dienstende (nicht verfügbar)</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="menu_export">Export Log PDF</string>

</resources>
